--- a/json.html
+++ b/json.html
@@ -28,12 +28,12 @@
 		</script>
 	</head>
 	<body>
-		<b>1. Here is simple demonstration of JSON.parse()</b>
+		<b>1. Here is simple demonstration of <font color="red">JSON.parse()</font></b>
 		<div>
 			<button type="button" onclick="parseNames()">See All Parse Names</button>
 		</div>
 		<div id="output1"></div><br><br>
-		<b>2. Here is simple demonstration of JSON.stringify()</b>
+		<b>2. Here is simple demonstration of <font color="green">JSON.stringify()</font></b>
 		<div>
 			<button type="button" onclick="stringifyNames()">See All Stringify Names</button>
 			
