--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello World!</h1>
-		<p>I am hosted with GitHub Pages. This is a Test.</p>
+		<h1>Topics</h1>
+		<a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1. JavaScript - Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</a><br/>
+		<a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link1">2. JavaScript Objects - Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a><br/>
 	</body>
 </html>
