--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Topics</title>
+	</head>
 	<body>
 		<h1>Topics</h1>
 		<a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1. JavaScript - Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</a><br/>
