--- a/index.html
+++ b/index.html
@@ -2,11 +2,69 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Topics</title>
+		<title>Home</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
 	</head>
 	<body>
-		<h1>Topics</h1>
-		<a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1. JavaScript - Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</a><br/>
-		<a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link1">2. JavaScript Objects - Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a><br/>
+		<!-- Head -->
+		<div id="navcontainer">
+            <ul id="navlist">
+                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+            </ul>
+        </div>
+		<!-- Head -->
+		
+		<h2>Welcome to the Topic Content</h2>
+		<h4 class="sandbox">Topics:</h4>
+		<ol>
+			<li><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">JavaScript.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">JavaScript Objects.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/json.html" class="link3">JSON.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">AJAX.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">Local Storage.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">DOM.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">CSS Class Properties Using JavaScript.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">Transitions and Animations with JavaScript.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/events.html" class="link9">JavaScript Event.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">HTML5 Tags.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">CSS3 Animations.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">CSS3 Transitions.</a></li>
+			<li><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">CSS3 Transforms.</a></li>
+		</ol>
+		
+		<!-- Footer -->
+		<div id="navcontainer">
+            <ul id="navlist">
+                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+            </ul>
+        </div>
+		<!-- Footer -->
 	</body>
 </html>
