--- a/javaScript.html
+++ b/javaScript.html
@@ -4,8 +4,10 @@
 		<meta charset="UTF-8"/>
 		<title>JavaScript Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative 
 		Arrays</title>
+		<!-- CSS -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
+		<!-- CSS -->
 	</head>
 	<body>
 		<!-- Head -->
@@ -29,6 +31,8 @@
         </div>
 		<!-- Head -->
 		
+		</br>
+		</br>
 		<h1>JavaScript Loops</h1>
 		<!-- 1. Conditional Statements -->
 		<h2>1. Conditional Statements.</h2>
@@ -206,26 +210,5 @@
 				document.getElementById('output2').innerHTML = myObj.firstName + " " + myObj.lastName;
 			}
 		</script>
-		
-		<!-- Footer -->
-		<div id="navcontainer">
-            <ul id="navlist">
-                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
-				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
-            </ul>
-        </div>
-		<!-- Footer -->
 	</body>
 </html>
