--- a/transforms.html
+++ b/transforms.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</title>
+		<!-- CSS -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
+		<!-- CSS -->
 		
 		<style>
 			body {
@@ -10,13 +14,23 @@
 			}
 			
 			div {
-				position: relative;
-				width: 250px;
-				height: 100px;
 				background-color: lightblue;
-				border: 1.25px solid black;
 			}	
 			
+			
+			#example1,
+			#example2,
+			#example3,
+			#example4,
+			#example5,
+			#example6,
+			#example7,
+			#example8{
+				width: 250px;
+				height: 100px;
+				position: relative;
+				border: 1.25px solid black;
+			}
 			
 			#example1:hover {
 				background-color: lightgreen;
@@ -67,7 +81,30 @@
 		</style>
 	</head>
 	<body>
-		<h2>CSS3 Transforms</h2>
+		<!-- Head -->
+		<div id="navcontainer">
+            <ul id="navlist">
+                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+            </ul>
+        </div>
+		<!-- Head -->
+		
+		</br>
+		</br>
+		<h1>CSS3 Transforms</h1>
 		<h3>Hover over the rectangles and watch them change!</h3>
 		<h4>2D Transforms:</h4>
 		<div id="example1">Example1 (translate 2D)</div>
