--- a/transitions.html
+++ b/transitions.html
@@ -8,13 +8,10 @@
 		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
 		<!-- CSS -->
 		
-        <style type="text/css">
-			div {
+        <style type="text/css">			
+			.example1 {
 				margin: 10px;
 				height: 120px;
-			}
-			
-			.example1 {
                 background: blue;
 				width: 130px;
                 transition-duration: 2s;
@@ -28,6 +25,8 @@
 			
 			
             .example2 {
+				margin: 10px;
+				height: 120px;
                 background: aquamarine;
                 border-radius: 10% 25% 35% 50%;
 				width: 130px;
@@ -42,6 +41,8 @@
             .example31,
 			.example32,
 			.example33 {
+				margin: 10px;
+				height: 120px;
 				position: absolute;
                 border-radius: 1px;
 				width: 120px;
@@ -91,6 +92,8 @@
         </div>
 		<!-- Head -->
 		
+		</br>
+		</br>
 		<h1>CSS3 Transitions</h1>
 		<h3>Simple Transition</h3>
         <div class="example1">Example1</div>
