--- a/animations.html
+++ b/animations.html
@@ -8,19 +8,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
 		<!-- CSS -->
 		
-		<style>
-			body {
-				padding: 0.5em;
-			}
-			
-			div {
-				position: relative;
-				height: 80px;
-				width: 80px;
-			}
-			
-			
-			
+		<style>					
 			@keyframes example1{
 				from {
 					background-color: green;
@@ -31,6 +19,10 @@
 			}
 			
 			#example1 {
+				margin: 10px;
+				height: 80px;
+				width: 80px;
+				position: relative;
 				animation-name: example1;
 				animation-duration: 4s;
 				animation-timing-function: ease;
@@ -67,7 +59,10 @@
 			}
 			
 			#example2 {
-				position: absolute;
+				margin: 10px;
+				height: 80px;
+				width: 80px;
+				position: relative;
 				animation: example2 7s ease-in-out 3s infinite alternate;
 			}
 			
@@ -101,7 +96,10 @@
 			}
 			
 			#example3 {
-				position: absolute;
+				margin: 10px;
+				height: 80px;
+				width: 80px;
+				position: relative;
 				animation: example3 6s linear 5s infinite alternate;
 			}
 			
@@ -118,8 +116,10 @@
 			}
 			
 			#example4 {
+				margin: 10px;
+				height: 80px;
 				width: 100px;
-				height: 100px;
+				position: relative;
 				background: lightblue;
 				border-radius: 0px;
 				animation-name: example4;
@@ -155,6 +155,8 @@
         </div>
 		<!-- Head -->
 		
+		</br>
+		</br>
 		<h1>CSS3 Animations</h1>
 		<div id='example1'>Example1</div>
 		</br>
