--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -3,8 +3,35 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>JavaScript Objects</title>
+		<!-- CSS -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="style.css" rel="stylesheet" type="text/css" media="all"/>
+		<!-- CSS -->
 	</head>
 	<body>
+		<!-- Head -->
+		<div id="navcontainer">
+            <ul id="navlist">
+                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+            </ul>
+        </div>
+		<!-- Head -->
+		
+		</br>
+		</br>
 		<h1>JavaScript Objects</h1>
 		<!-- 1. Object Creation Functions -->
 		<h2>1. Object Creation Functions</h2>
