--- a/application.html
+++ b/application.html
@@ -131,8 +131,10 @@
 				font-size: 1.3em; 
 			}
 			
-			#user,
-			#password {
+			#user1,
+			#user2,
+			#pass1,
+			#pass2 {
 				color: DarkCyan;
 			}
 			
@@ -292,18 +294,65 @@
 				border-bottom: 1px solid DarkCyan;
 			}
 			
-			li {
+			#edit11,
+			#edit12,
+			#edit21,
+			#edit22,
+			#edit31,
+			#edit32,
+			#edit41,
+			#edit42,
+			#edit51,
+			#edit52,
+			#edit61,
+			#edit62,
+			#edit71,
+			#edit72 {
 				margin: 4px 0; 
 				padding: 4px 6px;
 				list-style-type:none;
 				font-size: 1.3em; 
 			}
+			
+			#navlist{ 
+				position: fixed;	
+				left: 0.1px;
+				right: 0.1px;
+				bottom: 0px;
+				padding: 8px;
+				margin: 0.5px;
+				border-top: 2px solid black;
+				border-bottom: 2px solid black;
+				background-color: Bisque;
+				font: bold 16px Verdana, sans-serif; 
+				font-size: 1em;
+			}
+
+			#navlist li{ 
+				display: inline; 
+				margin-left: 17px;
+			}
+
+			#navlist li a{ 
+				padding: 3px 1em;
+				border: 1px solid DarkSlateBlue; 
+				border-bottom: none;
+				background: DarkCyan; 
+				color: black;
+				text-decoration: none; 
+			}
+
+			#navlist li a:hover{
+				color: white; 
+				background: DarkSlateGray; 
+				border-color: black; 
+			}
 		</style>
 		<script>					
 			function registration() {	
 				// Get elements by id
-				var userNam = document.getElementById("username").value;
-				var passWordy = document.getElementById("password").value;
+				var userNam = document.getElementById("username1").value;
+				var passWordy = document.getElementById("password1").value;
 				// Checking
 				if (typeof(Storage) !== "undefined") {
 					// store user information
@@ -320,15 +369,15 @@
 			
 			function loginFunc() {
 				// Get elements by id
-				var userNam = document.getElementById("username").value;
-				var passWordy = document.getElementById("password").value;
+				var userNam = document.getElementById("username2").value;
+				var passWordy = document.getElementById("password2").value;
 				// Checking 
 				if (typeof(Storage) != "undefined") {
 					// retrieve user information
 					var user = JSON.parse(localStorage.getItem("user"));
 					if (user.username === userNam && user.password === passWordy){
 						document.querySelector('#logForm').classList.toggle('flipped');
-						check();
+						checkFunc();
 						return;
 					}
 					else {
@@ -439,7 +488,7 @@
 				document.getElementById("update7").innerHTML = "Your edits are saved!";
 			}
 			
-			function check() {
+			function checkFunc() {
 				//make sure that the user has previously saved edits
 				if(localStorage.userEdits11 != null)
 				document.getElementById("edit11").innerHTML = localStorage.userEdits11;
@@ -477,7 +526,7 @@
 				document.getElementById("edit72").innerHTML = localStorage.userEdits72;
 			}
 			
-			function clear() {
+			function clearFunc() {
 				localStorage.userEdits11 = "Name";
 				localStorage.userEdits12 = "Time";
 				
@@ -499,7 +548,7 @@
 				localStorage.userEdits71 = "Name";
 				localStorage.userEdits72 = "Time";
 				
-				check();
+				checkFunc();
 			}
 		</script>
 		<script>
@@ -584,12 +633,12 @@
 					<table>
 						<tr><th><h2 class="registrationHeader">REGISTRATION:</h2></th></tr>
 						<tr>
-							<td id="user">User Name:</td> 
-							<td><input type="text" name="username" id="username" size="16"></td>
+							<td id="user1">User Name:</td> 
+							<td><input type="text" name="username" id="username1" size="16"></td>
 						</tr>
 						<tr>
-							<td id="password">Password:</td> 
-							<td><input type="password" name="password" id="password" size="16"></td>
+							<td id="pass1">Password:</td> 
+							<td><input type="password" name="password" id="password1" size="16"></td>
 						</tr>
 					</table>
 					</br>
@@ -604,12 +653,12 @@
 						<table>
 							<tr><th><h2 class="loginHeader">Please LOGIN:</h2></th></tr>
 							<tr>
-								<td id="user">User Name:</td> 
-								<td><input type="text" name="username" id="username" size="16"></td>
+								<td id="user2">User Name:</td> 
+								<td><input type="text" name="username" id="username2" size="16"></td>
 							</tr>
 							<tr>
-								<td id="password">Password:</td> 
-								<td><input type="password" name="password" id="password" size="16"></td>
+								<td id="pass2">Password:</td> 
+								<td><input type="password" name="password" id="password2" size="16"></td>
 							</tr>
 						</table>
 						</br>
@@ -621,7 +670,7 @@
 			<div class="back" id="back">
 				<center><h1 class="headerBack">My Schedule</h1></center>
 				</br>
-				<button type="button" onclick="clear()"class="buttonForm">Clear All Information</button>
+				<button type="button" onclick="clearFunc()"class="buttonForm">Clear All Information</button>
 				</br>
 				</br>
 				<div class="dayStyle">
@@ -717,5 +766,27 @@
 				</div>
 			</div>
 		</div>
+		
+		<!-- Footer -->
+		<div id="navcontainer">
+            <ul id="navlist">
+                <li id="active"><a href="https://bondarenko-victoria.github.io/index.html" class="link">HOME</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScript.html" class="link1">1</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/javaScriptObjects.html" class="link2">2</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/json.html" class="link3">3</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/ajax.html" class="link4">4</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/localStorage.html" class="link5">5</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/dom.html" class="link6">6</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/classProperties.html" class="link7">7</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitionsAnimations.html" class="link8">8</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/events.html" class="link9">9</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/tags.html" class="link10">10</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+				<li id="active"><a href="https://bondarenko-victoria.github.io/application.html" class="link14">APP</a></li>
+            </ul>
+        </div>
+		<!-- Footer -->
 	</body>
 </html>
