--- a/events.html
+++ b/events.html
@@ -28,6 +28,7 @@
 				<li id="active"><a href="https://bondarenko-victoria.github.io/animations.html" class="link11">11</a></li>
 				<li id="active"><a href="https://bondarenko-victoria.github.io/transitions.html" class="link12">12</a></li>
 				<li id="active"><a href="https://bondarenko-victoria.github.io/transforms.html" class="link13">13</a></li>
+		    		<li id="active"><a href="https://bondarenko-victoria.github.io/application.html" class="link14">APP</a></li>
             </ul>
         </div>
 		<!-- Head -->
