--- a/javaScript.html
+++ b/javaScript.html
@@ -34,7 +34,7 @@
 		
 		</br>
 		</br>
-		<h1>JavaScript Loops</h1>
+		<h1>1. JavaScript Loops</h1>
 		<!-- 1. Conditional Statements -->
 		<h2>1. Conditional Statements.</h2>
 		<p>This example will show you how conditional statements works.</p>
