--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -33,7 +33,7 @@
 		
 		</br>
 		</br>
-		<h1>JavaScript Objects</h1>
+		<h1>2. JavaScript Objects</h1>
 		<!-- 1. Object Creation Functions -->
 		<h2>1. Object Creation Functions</h2>
 		<script>
