--- a/ajax.html
+++ b/ajax.html
@@ -34,7 +34,7 @@
 		
 		</br>
 		</br>
-		<h1>AJAX</h1>
+		<h1>4. AJAX</h1>
 		<script type="text/javascript">
 			function showingName() {
 				xhttp = new XMLHttpRequest();
