--- a/localStorage.html
+++ b/localStorage.html
@@ -34,7 +34,7 @@
 		
 		</br>
 		</br>
-		<h1>Local Storage</h1>
+		<h1>5. Local Storage</h1>
 		<h2>Local Storage Storing Data</h2>
 
 		<p>Please enter your information below:</p>
