--- a/dom.html
+++ b/dom.html
@@ -34,7 +34,7 @@
 		
 		</br>
 		</br>
-		<h1>DOM</h1>
+		<h1>6. DOM</h1>
 		<!-- 1. createElement() and appendChild() -->
 		<h2>1. createElement() and appendChild()</h2>
 		<p><strong>We have 2 lines:</strong></p>
