--- a/classProperties.html
+++ b/classProperties.html
@@ -33,7 +33,7 @@
 		
 		</br>
 		</br>
-		<h1>CSS Class Properties Using JavaScript</h1>
+		<h1>7. CSS Class Properties Using JavaScript</h1>
         <div>
             <h2>Manipulating CSS Class Properties Using JavaScript</h2>
             <h3 id="title">My favorite quote :)</h3>
