--- a/transitionsAnimations.html
+++ b/transitionsAnimations.html
@@ -146,7 +146,7 @@
 		
 		</br>
 		</br>
-		<h1>Transitions and Animations with JavaScript</h1>
+		<h1>8. Transitions and Animations with JavaScript</h1>
         <h2>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h2>
 		<h3>CSS3 Transitions</h3>
 		<p>Hover examples to see a change!</p>
