--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
 		
 		</br>
 		</br>
-		<h1>JavaScript Event</h1>
+		<h1>9. JavaScript Event</h1>
         <div>
             <h2>Standard JavaScript Events Including those for Mobile Devices</h2>
             <h3>Onclick Event</h3>
