--- a/transitions.html
+++ b/transitions.html
@@ -95,7 +95,7 @@
 		
 		</br>
 		</br>
-		<h1>CSS3 Transitions</h1>
+		<h1>12. CSS3 Transitions</h1>
 		<h3>Simple Transition</h3>
         <div class="example1">Example1</div>
 		</br>
