--- a/animations.html
+++ b/animations.html
@@ -158,7 +158,7 @@
 		
 		</br>
 		</br>
-		<h1>CSS3 Animations</h1>
+		<h1>11. CSS3 Animations</h1>
 		<div id='example1'>Example1</div>
 		</br>
 		</br>
