--- a/application.html
+++ b/application.html
@@ -114,7 +114,7 @@
 			
 			#loginForm { 
 				width:100%; 
-				margin-top: -130px;
+				margin-top: -155px;
 			}
 			
 			table {
@@ -124,11 +124,11 @@
 			.registrationHeader,
 			.loginHeader {
 				color: DarkCyan; 
-				font-size:2em;
+				font-size:1.7em;
 			}
 			
 			td {
-				font-size: 1.3em; 
+				font-size: 1.1em; 
 			}
 			
 			#user1,
@@ -144,9 +144,9 @@
 			}
 			
 			button {
-				font-size:1.1em;  
-				width: 180px; 
-				height: 50px;
+				font-size:0.9em;  
+				width: 165px; 
+				height: 40px;
 			}
 			
 			.buttonForm {
@@ -257,7 +257,7 @@
 			}
 			
 			.dayStyle a{
-				font-size:2em;
+				font-size:1.5em;
 				text-decoration:none; 
 				padding-left: 12px;
 			}
@@ -324,8 +324,7 @@
 				border-top: 2px solid black;
 				border-bottom: 2px solid black;
 				background-color: Bisque;
-				font: bold 16px Verdana, sans-serif; 
-				font-size: 1em;
+				font: bold 13.44px Verdana, sans-serif; 
 			}
 
 			#navlist li{ 
@@ -551,6 +550,27 @@
 				checkFunc();
 			}
 		</script>
+		
+		<script>
+			function personalSchedule() {
+				xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function() {
+					if (xhttp.readyState == 4 && xhttp.status == 200) {
+						var value = JSON.parse(xhttp.responseText);
+						console.log(value)
+						var table = "<table><tr><th>13 Topics</th><th>Weeks</th><th>Done</th></tr>\n";
+						for (var i = 0; i < value.schedule.length; i++) {
+							table += "<tr><td>" + value.schedule[i].topic + "</td><td>" + value.schedule[i].week + 
+							"</td><td>" + value.schedule[i].done + "</td></tr>\n";
+						}
+						document.getElementById("result").innerHTML = table;
+					}
+				}
+				xhttp.open('GET', 'https://bondarenko-victoria.github.io/ajaxApp.json', true);
+				xhttp.send();
+			}
+		</script>
+		
 		<script>
 			function mondayFunc(){
 				var panel = document.getElementById('mondayID');
@@ -663,15 +683,14 @@
 						</table>
 						</br>
 						<button type="button" onclick="loginFunc()" class="buttonForm">LOG IN</button>
-						</br>
+						</br></br></br></br>
 					</div>	
 				</center>  
 			</div>
 			<div class="back" id="back">
 				<center><h1 class="headerBack">My Schedule</h1></center>
 				</br>
-				<button type="button" onclick="clearFunc()"class="buttonForm">Clear All Information</button>
-				</br>
+				<button type="button" onclick="clearFunc()"class="buttonForm">Clear Information</button>
 				</br>
 				<div class="dayStyle">
 					<div class="weekStyle" onClick="mondayFunc()"><a href="#">Monday</a></div>
@@ -764,6 +783,10 @@
 						</ul>           
 					</div>
 				</div>
+				</br>
+				<p id="result"></p>
+				<button type="button" onclick="personalSchedule()"class="buttonForm">Topics</button>
+				</br></br>
 			</div>
 		</div>
 		
